<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MovieDetailActivity">

    <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/movie_item_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stateListAnimator="@drawable/lift_on_touch"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            tools:targetApi="lollipop" >
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/movie_detail_img"
                    android:layout_width="100dp"
                    android:layout_height="150dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:src="@mipmap/movie_cover"/>
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/movie_detail_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="25sp"
                        android:lines="1"
                        android:ellipsize="end"
                        android:textStyle="bold"
                        android:text="Secret"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#A9A5A2" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Summary"
                            android:textStyle="bold"/>
                        <TextView
                            android:id="@+id/summary_detail_content"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:lines="2"
                            android:ellipsize="end"
                            android:text="Ye Xiang Lun, a talented piano player is a new student at the prestigious Tamkang School. On his first day, he meets Lu Xiao Yu, a pretty girl playing a mysterious piece of music."/>
                    </androidx.appcompat.widget.LinearLayoutCompat>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#A9A5A2" />
                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="Genre"/>
                        <TextView
                            android:id="@+id/genre_detail_content"
                            android:layout_marginLeft="35dp"
                            android:layout_marginRight="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:lines="1"
                            android:ellipsize="end"
                            android:text="Drama, fantasy, movie"
                            />
                    </androidx.appcompat.widget.LinearLayoutCompat>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#A9A5A2" />
                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_marginTop="5dp"
                        android:layout_height="match_parent">
                        <TextView
                            android:layout_marginLeft="15dp"
                            android:gravity="center_vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="Rate"
                            android:textStyle="bold"/>
                        <TextView
                            android:layout_marginLeft="5dp"
                            android:id="@+id/movie_detail_rate_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="normal"
                            android:text="9.9"/>
                        <TextView
                            android:gravity="center_vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="Year"
                            android:layout_marginLeft="20dp"
                            android:textStyle="bold"/>
                        <TextView
                            android:layout_marginLeft="5dp"
                            android:id="@+id/movie_detail_year_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="normal"
                            android:text="2007"/>
                        <TextView
                            android:gravity="center_vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="Runtime"
                            android:layout_marginLeft="20dp"
                            android:textStyle="bold"/>
                        <TextView
                            android:layout_marginLeft="5dp"
                            android:id="@+id/movie_detail_runtime_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="normal"
                            android:text="144 min"/>
                    </androidx.appcompat.widget.LinearLayoutCompat>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#A9A5A2" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.cardview.widget.CardView>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:text="DO you like this movie?"/>
        <TextView
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="Let's rate it!"/>
        <RatingBar
            android:layout_gravity="center_horizontal"
            android:id="@+id/rating_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:numStars="5"
            android:rating="3"
            android:outlineAmbientShadowColor="#000000"
            />
        <TextView
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:hint="@string/rating_star_hint"/>
        <EditText
            android:id="@+id/movie_detail_review_text"
            android:gravity="clip_vertical"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:lines="4"
            android:textSize="20sp"
            android:ellipsize="end"
            android:hint="@string/rating_review_hint"
            android:background="@drawable/edit_background"
            android:text=""

            />
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <Button
                android:id="@+id/review_button"
                android:layout_width="200dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:background="@drawable/button_ripple"
                android:text="@string/see_review"/>
            <Button
                android:id="@+id/rating_button"
                android:layout_width="150dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:background="@drawable/button_ripple"
                android:text="@string/submit_rate"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>